Notifications: Fix alignment of mark as read button

--- a/src/styles/_notifications.sass
+++ b/src/styles/_notifications.sass
@@ -147,7 +147,7 @@
 		float: right
 		position: absolute
 		top: 5px
-		right: 3px
+		right: -14px
 		padding: 5px
 
 		&.active
